# ASI_projekt

./: README.md  requirements.txt
.run/: Streamlit (frontend).run.xml
kedro02/: .gitignore  Dockerfile  README.md  pyproject.toml  run_api.sh
kedro02/conf/base/: catalog.yml  parameters.yml
kedro02/conf/local/: credentials.yml
kedro02/notebooks/: 01_car_price_baseline.ipynb
kedro02/src/kedro02/: api.py  pipeline_registry.py  settings.py
kedro02/src/kedro02/api/: app.py
kedro02/src/kedro02/nodes/: __init__.py  modeling.py  preprocessing.py
kedro02/src/kedro02/pipelines/: __init__.py  pipeline.py  streamlit_app.py
